--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   firebase_auth: ^5.3.0
   firebase_core: ^3.5.0
+  google_sign_in: ^6.2.2
   flutter:
     sdk: flutter
 
@@ -70,7 +71,8 @@ flutter:
     - assets/Illustrations (2).png
     - assets/Social accounts.png
     - assets/Open Doodles.png
-  
+    - assets/google.png
+    - assets/applelogo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
