--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   firebase_auth: ^5.3.0
   firebase_core: ^3.5.0
+  cloud_firestore: ^5.6.1
   google_sign_in: ^6.2.2
   flutter:
     sdk: flutter
