--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_core: ^3.5.0
   cloud_firestore: ^5.6.1
   google_sign_in: ^6.2.2
+  intl_phone_field:
   pinput: ^5.0.1
   flutter:
     sdk: flutter
