--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_sign_in: ^6.2.2
   intl_phone_field:
   geolocator: ^13.0.2
+  geocoding: ^3.0.0
   pinput: ^5.0.1
   flutter:
     sdk: flutter
