--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   pinput: ^5.0.1
+  carousel_slider: ^5.0.0
+  smooth_page_indicator: ^1.2.0+3
   flutter:
     sdk: flutter
 
@@ -84,7 +86,6 @@ flutter:
     - assets/2.png
     - assets/3.png
     - assets/4.png
-    - assets/adi.png
     - assets/Banner.png
     - assets/aa.png
     - assets/ab.png
